--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,7 @@ celerybeat.pid
 .venv
 env/
 venv/
+lya_env/
 ENV/
 env.bak/
 venv.bak/
@@ -130,3 +131,4 @@ dmypy.json
 
 # Files
 SO_fisher/
+codes/
